--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Project-specific
+package-lock.json
+/node_modules/*
+/pinterest/node_modules
+/pinterest/package-lock.json
+/pinterest/webpack-stats.json
+/pinterest/.sass-cache/*
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
