--- a/pinterest/package.json
+++ b/pinterest/package.json
@@ -4,6 +4,7 @@
   "description": "pinterest clone",
   "main": "index.js",
   "scripts": {
+    "build": "webpack --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -30,7 +31,14 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0",
     "webpack": "^3.8.1",
     "webpack-bundle-tracker": "^0.2.0"
+  },
+  "dependencies": {
+    "masonry-layout": "^4.2.0"
   }
 }
