--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,6 @@
-certifi==2017.4.17
-chardet==3.0.4
-flake8==3.4.1
-googlemaps==2.5.1
-idna==2.5
-mccabe==0.6.1
-pbr==3.1.1
-pew==1.0.1
-pipenv==8.3.1
-pycodestyle==2.3.1
-pyflakes==1.5.0
-requests==2.18.1
+Django==1.11.6
+gunicorn==19.7.1
+pymongo==3.5.1
+pytz==2017.3
 six==1.11.0
-stevedore==1.27.1
-urllib3==1.21.1
-virtualenv==15.1.0
-virtualenv-clone==0.2.6
-virtualenvwrapper==4.8.2
+uuid==1.30
